--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
       <article class="section-1">
         <section>
-          <h2 class="Collectibles">Collectable NFTs</h2>
+          <h2 class="Collectible">Collectable NFTs</h2>
           <p>Find trending NFTs Auctions & Buy Timeless Artworks</p>
           <p>
             A much simpler NFT market that offers extraordinary original
